[package]
name = "scip-to-glean"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Convert SCIP protobuf files to Glean facts JSON"

[features]
default = []
facebook = []

[[bin]]
name = "scip-to-glean"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
protobuf = "3"
scip_symbol = { path = "../scip_symbol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
protobuf-codegen = "3"

[dev-dependencies]
tempfile = "3"
